--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
     <input type="text" id="text1" placeholder="Digite seu nome">
     <button onclick="usuarioEntra()">Entrar</button>
     <script src="js/script.js"></script>
+
+    <input type="text" id="vl3" placeholder="primeiro valor">
+    <input type="text" id="vl4" placeholder="segundo valor">
+    <button onclick="calcularMedia()">Calcular Media</button> 
+
+     <input type="text" id="vl5" placeholder="R$">
+      <button onclick="calcularDollar()">Calcular Dollar</button> 
+
+    <input type="text" id="vl6" placeholder="valor base">
+    <input type="text" id="vl7" placeholder="valor altura">
+    <button onclick="calcularAreaTriangulo()">Calcular Area Triangulo</button> 
+    <input type="text" id="vl8" placeholder="Data Nascimento">
+    <button onclick="calcularIdade()">Calcular Idade</button>
 </body>
 </html>
